# alfred-pm

./: README.md  project_manager.py  pyproject.toml
workflow/: __init__.py  workflow.py
