[tool.poetry]
name = "alfred-project-manager"
version = "0.1.0"
description = ""
authors = ["CapBlood <stalker.anonim@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
#Alfred-Workflow = "^1.40.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
